force-app/main/default/objects/User/fields/Activity_Code__c.field-meta.xml
<CustomField>
    <fullName>Activity_Code__c</fullName>
    <label>Activity Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>