force-app/main/default/objects/User/fields/Area_of_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Expertise__c</fullName>
    <description>The ASA Associates area of expertise for help direction questions concerning School/Lender set up.</description>
    <label>Area of Expertise</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASA Direct</fullName>
            </value>
            <value>
                <fullName>Branding</fullName>
            </value>
            <value>
                <fullName>Collateral Materials</fullName>
            </value>
            <value>
                <fullName>Default Fee Policy</fullName>
            </value>
            <value>
                <fullName>DL</fullName>
            </value>
            <value>
                <fullName>Electronic Processing</fullName>
            </value>
            <value>
                <fullName>ELM</fullName>
            </value>
            <value>
                <fullName>FAMS - Banner</fullName>
            </value>
            <value>
                <fullName>FAMS - Colleague</fullName>
            </value>
            <value>
                <fullName>FAMS - PeopleSoft</fullName>
            </value>
            <value>
                <fullName>FAMS - Powerfaids</fullName>
            </value>
            <value>
                <fullName>FFH/CAM</fullName>
            </value>
            <value>
                <fullName>Mapping Your Future</fullName>
            </value>
            <value>
                <fullName>OpenNet</fullName>
            </value>
            <value>
                <fullName>Profile Set Up</fullName>
            </value>
            <value>
                <fullName>Regulations - HERA</fullName>
            </value>
            <value>
                <fullName>School as Lender</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Regulations - FERPA</fullName>
            </value>
            <value>
                <fullName>Regulations - GLB Act</fullName>
            </value>
            <value>
                <fullName>FAMS - General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>