force-app/main/default/objects/User/fields/article_approver__c.field-meta.xml
<CustomField>
    <fullName>article_approver__c</fullName>
    <label>Article Approver</label>
    <relationshipName>R00N60000001YOSfEAO</relationshipName>
    <restrictedAdminField>true</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>