force-app/main/default/objects/User/fields/c2g__APILicenseKey__c.field-meta.xml
<CustomField>
    <fullName>c2g__APILicenseKey__c</fullName>
    <label>API License Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>