force-app/main/default/objects/User/fields/c2g__SupportDataAccessKey__c.field-meta.xml
<CustomField>
    <fullName>c2g__SupportDataAccessKey__c</fullName>
    <label>Support Data Access Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>