force-app/main/default/objects/User/fields/RT1__MeetingsCollaboratorUser__c.field-meta.xml
<CustomField>
    <fullName>RT1__MeetingsCollaboratorUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ReadyTalk Collaborator User</label>
    <type>Checkbox</type>
</CustomField>