force-app/main/default/objects/User/fields/RT1__ReadyTalkAdministrator__c.field-meta.xml
<CustomField>
    <fullName>RT1__ReadyTalkAdministrator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the user is allowed to perform administrative functions in the ReadyTalk application</description>
    <inlineHelpText>Indicates the user is allowed to perform administrative functions in the ReadyTalk application</inlineHelpText>
    <label>ReadyTalk Administrator</label>
    <type>Checkbox</type>
</CustomField>