force-app/main/default/objects/User/fields/RT1__ReadyTalkUser__c.field-meta.xml
<CustomField>
    <fullName>RT1__ReadyTalkUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the user has access to the full functionality in the ReadyTalk application.</description>
    <inlineHelpText>Indicates the user has access to the full functionality in the ReadyTalk application.</inlineHelpText>
    <label>ReadyTalk Webinar User</label>
    <type>Checkbox</type>
</CustomField>