force-app/main/default/objects/User/fields/User_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>User_Customer_Code__c</fullName>
    <description>Field Corresponding to same field on Account</description>
    <label>Company ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>