force-app/main/default/objects/User/fields/User_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>User_Hire_Date__c</fullName>
    <description>What date was the user hired at ASA in that certain role.</description>
    <label>Hire Date</label>
    <type>Date</type>
</CustomField>