force-app/main/default/objects/User/validationRules/CompanyNameNotEditableByEmployrCommunity.validationRule-meta.xml
<ValidationRule>
    <fullName>CompanyNameNotEditableByEmployrCommunity</fullName>
    <active>true</active>
    <description>Prevent Employer Community Users to change CompanyName</description>
    <errorConditionFormula>AND(ISCHANGED(CompanyName),ISPICKVAL($Profile.UserType, &#39;CspLitePortal&#39;))</errorConditionFormula>
    <errorMessage>Contact Salt to update your Company.</errorMessage>
</ValidationRule>