force-app/main/default/objects/User/listViews/Customer_Community_User_by_School.listView-meta.xml
<ListView>
    <fullName>Customer_Community_User_by_School</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.COMPANY_NAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Customer Community User</value>
    </filters>
    <filters>
        <field>CORE.USERS.COMPANY_NAME</field>
        <operation>contains</operation>
        <value>Northcentral Technical College</value>
    </filters>
    <label>Customer Community User by School</label>
</ListView>