force-app/main/default/objects/User/listViews/ProfessionalServicesTeamMembers.listView-meta.xml
<ListView>
    <fullName>ProfessionalServicesTeamMembers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USERS.CELL</columns>
    <columns>CORE.USERS.PHONE</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>contains</operation>
        <value>Professional Services</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Professional Services Team Members</label>
</ListView>